one event handler and one POST

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -14,12 +14,12 @@
         <input id="inputOne" type="number" name="" value="" placeholder="TYPE A NUMBER">
         <input id="inputTwo" type="number" name="" value="" placeholder="TYPE A NUMBER">
     </form>
-
-    <button id="addButton" type="button" name="button">ADD</button>
-    <button id="subtractButton" type="button" name="button">SUBTRACT</button>
-    <button id="multiplyButton" type="button" name="button">MULTIPLY</button>
-    <button id="divideButton" type="button" name="button">DIVIDE</button>
-
+<div id="MathButtonsDiv">
+    <button id="addButton" type="button" data-kind="addButton" name="button">ADD</button>
+    <button id="subtractButton" type="button" data-kind="subtractButton" name="button">SUBTRACT</button>
+    <button id="multiplyButton" type="button" data-kind="multiplyButton" name="button">MULTIPLY</button>
+    <button id="divideButton" type="button" data-kind="divideButton" name="button">DIVIDE</button>
+</div>
     <div id="answer"></div>
     <button id="clearButton" type="button" name="button">CLEAR</button>
 
