18 buttons display on inputs after clicked, still same server functionality

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -10,18 +10,62 @@
 
 <body>
     <h1>Wanna Calculate?</h1>
+
+
+
+    <div id="firstNumberButtonsDiv">
+        <span>First Number</span>
+        <button id="one" type="button" data-amount="1" name="button">1</button>
+        <button id="two" type="button" data-amount="2" name="button">2</button>
+        <button id="three" type="button" data-amount="3" name="button">3</button>
+        <button id="four" type="button" data-amount="4" name="button">4</button>
+        <button id="five" type="button" data-amount="5" name="button">5</button>
+        <button id="six" type="button" data-amount="6" name="button">6</button>
+        <button id="seven" type="button" data-amount="7" name="button">7</button>
+        <button id="eight" type="button" data-amount="8" name="button">8</button>
+        <button id="nine" type="button" data-amount="9" name="button">9</button>
+        <button id="zero" type="button" data-amount="0" name="button">0</button>
+    </div>
+
     <form method="post">
-        <input id="inputOne" type="number" name="" value="" placeholder="TYPE A NUMBER">
-        <input id="inputTwo" type="number" name="" value="" placeholder="TYPE A NUMBER">
+        <input id="inputOne" type="number" name="" value="">
     </form>
-<div id="MathButtonsDiv">
-    <button id="addButton" type="button" data-kind="addButton" name="button">ADD</button>
-    <button id="subtractButton" type="button" data-kind="subtractButton" name="button">SUBTRACT</button>
-    <button id="multiplyButton" type="button" data-kind="multiplyButton" name="button">MULTIPLY</button>
-    <button id="divideButton" type="button" data-kind="divideButton" name="button">DIVIDE</button>
-</div>
+
+
+
+
+
+    <div id="secondNumberButtonsDiv">
+        <span>Second Number</span>
+        <button id="oneb" type="button" data-amount="1" name="button">1</button>
+        <button id="twob" type="button" data-amount="2" name="button">2</button>
+        <button id="threeb" type="button" data-amount="3" name="button">3</button>
+        <button id="fourb" type="button" data-amount="4" name="button">4</button>
+        <button id="fiveb" type="button" data-amount="5" name="button">5</button>
+        <button id="sixb" type="button" data-amount="6" name="button">6</button>
+        <button id="sevenb" type="button" data-amount="7" name="button">7</button>
+        <button id="eightb" type="button" data-amount="8" name="button">8</button>
+        <button id="nineb" type="button" data-amount="9" name="button">9</button>
+        <button id="zerob" type="button" data-amount="0" name="button">0</button>
+    </div>
+
+    <form method="post">
+        <input id="inputTwo" type="number" name="" value="">
+    </form>
+
+    <div id="MathButtonsDiv">
+        <button id="addButton" type="button" data-kind="addButton" name="button">ADD</button>
+        <button id="subtractButton" type="button" data-kind="subtractButton" name="button">SUBTRACT</button>
+        <button id="multiplyButton" type="button" data-kind="multiplyButton" name="button">MULTIPLY</button>
+        <button id="divideButton" type="button" data-kind="divideButton" name="button">DIVIDE</button>
+    </div>
+
+
     <div id="answer"></div>
     <button id="clearButton" type="button" name="button">CLEAR</button>
+
+
+
 
 </body>
 
