lost track got messy and went back. working again with two rows of buttons. all 4 operands working but only with one digit numbers

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -2,8 +2,15 @@
 <html>
 
 <head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
-    <script src="vendor/jquery.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="js/client.js"></script>
     <title>Calculator</title>
 </head>
@@ -12,56 +19,57 @@
     <h1>Wanna Calculate?</h1>
 
 
+    <p class="topReadOut">
+        <div id="inputOne" class="inputStyle"> </div>
+        <div id="inputOperand" class="inputStyle">  </div>
+        <div id="inputTwo" class="inputStyle">  </div>
+    </p>
 
-    <div id="firstNumberButtonsDiv">
-        <span>First Number</span>
-        <button id="one" type="button" data-amount="1" name="button">1</button>
-        <button id="two" type="button" data-amount="2" name="button">2</button>
-        <button id="three" type="button" data-amount="3" name="button">3</button>
-        <button id="four" type="button" data-amount="4" name="button">4</button>
-        <button id="five" type="button" data-amount="5" name="button">5</button>
-        <button id="six" type="button" data-amount="6" name="button">6</button>
-        <button id="seven" type="button" data-amount="7" name="button">7</button>
-        <button id="eight" type="button" data-amount="8" name="button">8</button>
-        <button id="nine" type="button" data-amount="9" name="button">9</button>
-        <button id="zero" type="button" data-amount="0" name="button">0</button>
-    </div>
-
-    <form method="post">
-        <input id="inputOne" type="number" name="" value="">
-    </form>
-
-
+    <p class="calc-row" id="firstNumberButtonsDiv">
+        <button id="one" class="numberButtonStyle" type="button" data-amount="1" name="button">1</button>
+        <button id="two" class="numberButtonStyle" type="button" data-amount="2" name="button">2</button>
+        <button id="three" class="numberButtonStyle" type="button" data-amount="3" name="button">3</button>
+        <button id="four" class="numberButtonStyle" type="button" data-amount="4" name="button">4</button>
+        <button id="five" class="numberButtonStyle" type="button" data-amount="5" name="button">5</button>
+        <button id="six" class="numberButtonStyle" type="button" data-amount="6" name="button">6</button>
+        <button id="seven" class="numberButtonStyle" type="button" data-amount="7" name="button">7</button>
+        <button id="eight" class="numberButtonStyle" type="button" data-amount="8" name="button">8</button>
+        <button id="nine" class="numberButtonStyle" type="button" data-amount="9" name="button">9</button>
+        <button id="zero" class="numberButtonStyle" type="button" data-amount="0" name="button">0</button>
+    </p>
 
 
 
-    <div id="secondNumberButtonsDiv">
-        <span>Second Number</span>
-        <button id="oneb" type="button" data-amount="1" name="button">1</button>
-        <button id="twob" type="button" data-amount="2" name="button">2</button>
-        <button id="threeb" type="button" data-amount="3" name="button">3</button>
-        <button id="fourb" type="button" data-amount="4" name="button">4</button>
-        <button id="fiveb" type="button" data-amount="5" name="button">5</button>
-        <button id="sixb" type="button" data-amount="6" name="button">6</button>
-        <button id="sevenb" type="button" data-amount="7" name="button">7</button>
-        <button id="eightb" type="button" data-amount="8" name="button">8</button>
-        <button id="nineb" type="button" data-amount="9" name="button">9</button>
-        <button id="zerob" type="button" data-amount="0" name="button">0</button>
-    </div>
-
-    <form method="post">
-        <input id="inputTwo" type="number" name="" value="">
-    </form>
-
-    <div id="MathButtonsDiv">
+    <p id="MathButtonsDiv">
         <button id="addButton" type="button" data-kind="addButton" name="button">ADD</button>
         <button id="subtractButton" type="button" data-kind="subtractButton" name="button">SUBTRACT</button>
         <button id="multiplyButton" type="button" data-kind="multiplyButton" name="button">MULTIPLY</button>
         <button id="divideButton" type="button" data-kind="divideButton" name="button">DIVIDE</button>
-    </div>
+    </p>
 
 
-    <div id="answer"></div>
+
+
+    <p class="calc-row" id="secondNumberButtonsDiv">
+        <button id="oneb" class="numberButtonStyle" type="button" data-amount="1" name="button">1</button>
+        <button id="twob" class="numberButtonStyle" type="button" data-amount="2" name="button">2</button>
+        <button id="threeb" class="numberButtonStyle" type="button" data-amount="3" name="button">3</button>
+        <button id="fourb" class="numberButtonStyle" type="button" data-amount="4" name="button">4</button>
+        <button id="fiveb" class="numberButtonStyle" type="button" data-amount="5" name="button">5</button>
+        <button id="sixb" class="numberButtonStyle" type="button" data-amount="6" name="button">6</button>
+        <button id="sevenb" class="numberButtonStyle" type="button" data-amount="7" name="button">7</button>
+        <button id="eightb" class="numberButtonStyle" type="button" data-amount="8" name="button">8</button>
+        <button id="nineb" class="numberButtonStyle" type="button" data-amount="9" name="button">9</button>
+        <button id="zerob" class="numberButtonStyle" type="button" data-amount="0" name="button">0</button>
+    </p>
+
+
+
+
+
+
+    <div id="answer">ANSWER</div>
+    <button id="submit" type="button" name="button">SUBMIT</button>
     <button id="clearButton" type="button" name="button">CLEAR</button>
 
 
